# python-project-52

./: .gitignore  Makefile  Procfile  README.md  coverage.xml  pyproject.toml  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: django.yml
labels/: models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task/: forms.py  models.py  tests.py  urls.py  views.py
task/migrations/: 0001_initial.py
task_manager/: filter.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/migrations/: 0001_initial.py  0002_initial.py  0002_myuser_delete_user.py  0003_status.py  0004_rename_title_status_name.py  0005_task.py  0006_task_description.py  0007_label_task_label.py  0007_labels_labeltotask_task_labels.py  0008_alter_labels_name_alter_status_name_and_more.py  0009_alter_task_labels.py  0010_remove_myuser_user_ptr.py  0011_alter_task_author_alter_task_executor_delete_myuser.py
task_manager/templates/: 404.html  confirm_delete.html  create.html  edit.html  index.html  labels.html  layout.html  login.html  navigation.html  pass_change.html  statuses.html  task.html  tasks.html  update.html  user_confirm_delete.html  user_create.html  user_update.html  users.html
task_manager/tests/: test_labels.py  test_models.py  test_status.py  test_task.py  test_user.py
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
