[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksey Kosin <akosin@udm.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.4"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
